--- a/images.html
+++ b/images.html
@@ -19,7 +19,7 @@
         <script>
         $(function() {
             $.ajax({
-                url: 'http://127.0.0.1:8000/api/images',
+                url: '127.0.0.1:8000/8000/images/,
                 method: 'GET',
                 dataType: 'json',
                 success: function(response) {
